syntax = "proto3";

package users;

option go_package = "users";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message ListUsersRequest {
    int32 page_size = 1;
    string page_token = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total_size = 2;
    string next_page_token = 3;
}

message GetUserRequest {
    string uuid = 1;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    bool enable = 4;
}

message UpdateUserRequest {
    string uuid = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    bool enable = 5;
}

message DeleteUserRequest {
    string uuid = 1;
}

message User {
    string uuid = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    bool enable = 5;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RegisterRequest {
    string username = 2;
    string password = 3;
    string email = 4;
}

service UserService {

    // List Users
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
          get: "/users"
        };
    }
    // Get User
    rpc GetUser (GetUserRequest) returns (User) {
        option (google.api.http) = {
          get: "/users/{uuid}"
        };
    }
    // Create User object request
    rpc CreateUser (CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }

    // Update User object request
    rpc UpdateUser (UpdateUserRequest) returns (User) {
        option (google.api.http) = {
            put: "/v1/users/{uuid}"
            body: "*"
        };
    }

    // Delete User object request
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          delete: "/v1/users/{uuid}"
        };
    }

    // Login login user
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }

    // Login login user
    rpc Register(RegisterRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }
}